package com.restaurante.platos.abstractos;

public interface IBebida {
    String obtenerNombre();
    String obtenerDescripcion();
    String obtenerRutaImagen();
}
