package com.restaurante.platos.abstractos;

public interface IPlatoPescado {
    String obtenerNombre();
    String obtenerDescripcion();
    String obtenerRutaImagen();
}
