package com.restaurante.platos.abstractos;

public interface IPlatoPollo {
    String obtenerNombre();
    String obtenerDescripcion();
    String obtenerRutaImagen();
}
