package com.restaurante.platos.abstractos;

public interface IPostre {
    String obtenerNombre();
    String obtenerDescripcion();
    String obtenerRutaImagen();
}
