package com.restaurante.platos.japoneses;

import com.restaurante.platos.abstractos.IPlatoPollo;
public class Yakitori implements IPlatoPollo {
    @Override
    public String obtenerNombre() {
        return "Yakitori";
    }

    @Override
    public String obtenerDescripcion() {
        return "Brochetas de pollo a la parrilla con salsa teriyaki.";
    }

    @Override
    public String obtenerRutaImagen() {
        return "/images/yakitori.png";
    }

}

